@@ -23,7 +23,6 @@ AC_OUTPUT([
 Makefile
 accerciser.spec
 accerciser.desktop
-help/C/accerciser.xml
 help/Makefile
 icons/Makefile
 plugins/Makefile
