@@ -2,8 +2,8 @@
 <!DOCTYPE article PUBLIC "-//OASIS//DTD DocBook XML V4.1.2//EN" 
 "http://www.oasis-open.org/docbook/xml/4.1.2/docbookx.dtd" [
   <!ENTITY legal SYSTEM "legal.xml">
-  <!ENTITY appversion "@VERSION@">
-  <!ENTITY manrevision "@VERSION@">
+  <!ENTITY appversion "0.1.0">
+  <!ENTITY manrevision "0.1.0">
   <!ENTITY date "2007-02-23">
   <!ENTITY app "<application>Accerciser</application>">
 ]>
