@@ -1,7 +1,6 @@
 include $(top_srcdir)/gnome-doc-utils.make
 dist-hook: doc-dist-hook
 
-EXTRA_DIST = C/accerciser.xml.in
 DOC_MODULE = accerciser
 DOC_ENTITIES = legal.xml 
 DOC_INCLUDES =
@@ -10,4 +9,4 @@ DOC_FIGURES = \
 	figures/api_browser.png \
 	figures/event_monitor.png \
 	figures/interface_viewer.png
-DISTCLEANFILES = C/accerciser.xml accerciser-C.omf
+DISTCLEANFILES = accerciser-C.omf
